--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl
-	base = 271d653
-	trimbase = 
+	base = 0a862b2
+	trimbase = 271d653
 	parent = upstream
 	previous = 85edde3
