--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_action
-	base = b962150
-	trimbase = 
+	base = 51b4c9a
+	trimbase = b962150
 	parent = upstream
 	previous = 85edde3
