--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_yaml_param_parser
 	base = 0a106c9
-	trimbase = 47e30a5
+	trimbase = 
 	parent = upstream
 	previous = b6cdc7a
