--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_yaml_param_parser
-	base = 2543fd2
-	trimbase = 
+	base = 459f880
+	trimbase = 2543fd2
 	parent = upstream
 	previous = 85edde3
