--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_lifecycle
-	base = 20d93d2
-	trimbase = 
+	base = cf150e7
+	trimbase = 20d93d2
 	parent = upstream
 	previous = 85edde3
