--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 63c2bde
+	base = 6291408
 	trimbase = 
 	parent = debian/turbulent/rcl_yaml_param_parser
-	previous = 
+	previous = 63c2bde
