--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 79571ad
+	base = 219ef91
 	trimbase = 
 	parent = debian/turbulent/rcl
-	previous = 
+	previous = 79571ad
