--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1be0b52
+	base = b9af085
 	trimbase = 
 	parent = debian/turbulent/rcl_action
-	previous = 
+	previous = 1be0b52
