--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6e1c213
+	base = 2b800b7
 	trimbase = 
 	parent = debian/turbulent/rcl_lifecycle
-	previous = 
+	previous = 6e1c213
