--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6beb80b
-	base = a5e2327
-	trim = 
-	trimbase = 
+	base = 7340047
+	trim = rcl_yaml_param_parser
+	trimbase = a5e2327
