--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6beb80b
-	base = 7ce6eba
-	trim = 
-	trimbase = 
+	base = 82fec99
+	trim = rcl_lifecycle
+	trimbase = 7ce6eba
