--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6beb80b
-	base = db3b6fc
-	trim = 
-	trimbase = 
+	base = 1937924
+	trim = rcl_action
+	trimbase = db3b6fc
