--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6beb80b
-	base = a24216e
-	trim = 
-	trimbase = 
+	base = e0b703f
+	trim = rcl
+	trimbase = a24216e
