--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rcl_yaml_param_parser
-	previous = 
-	base = 7340047
+	previous = 7340047
+	base = 8ab1963
 	trim = 
 	trimbase = 
