--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rcl_yaml_param_parser
-	previous = 
-	base = c32f60f
+	previous = c32f60f
+	base = d801d36
 	trim = 
 	trimbase = 
