--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rcl_action
-	previous = 
-	base = 1937924
+	previous = 1937924
+	base = 86ede4b
 	trim = 
 	trimbase = 
