--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rcl_action
-	previous = 
-	base = 4ebb76c
+	previous = 4ebb76c
+	base = 7aa7a2c
 	trim = 
 	trimbase = 
