--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rcl_lifecycle
-	previous = 
-	base = 82fec99
+	previous = 82fec99
+	base = 216aab5
 	trim = 
 	trimbase = 
