--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rcl_lifecycle
-	previous = 
-	base = fd83e8f
+	previous = fd83e8f
+	base = 77b0950
 	trim = 
 	trimbase = 
