--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rcl
-	previous = 
-	base = e0b703f
+	previous = e0b703f
+	base = 321a80d
 	trim = 
 	trimbase = 
