--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rcl
-	previous = 
-	base = 162c484
+	previous = 162c484
+	base = 44fd1e6
 	trim = 
 	trimbase = 
