--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_yaml_param_parser
-	base = 86f34ce
-	trimbase = 
+	base = 497bc16
+	trimbase = 86f34ce
 	parent = upstream
 	previous = 5b9d307
