--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_lifecycle
-	base = 755a419
-	trimbase = 
+	base = 6e9a56c
+	trimbase = 755a419
 	parent = upstream
 	previous = 5b9d307
