--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_action
-	base = c89de09
-	trimbase = 
+	base = 0758c5c
+	trimbase = c89de09
 	parent = upstream
 	previous = 5b9d307
