--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl
-	base = 6b17abd
-	trimbase = 
+	base = 5039a71
+	trimbase = 6b17abd
 	parent = upstream
 	previous = 5b9d307
