--- a/patches.conf
+++ b/patches.conf
@@ -2,5 +2,5 @@
 	trim = 
 	base = 9dae750
 	trimbase = 
-	parent = release/foxy/rcl_action
+	parent = release/testing/rcl_action
 	previous = 6b4d5f1
