--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_yaml_param_parser
 	base = dbc92ea
-	trimbase = ea16592
+	trimbase = 
 	parent = upstream
 	previous = 97a3e86
