--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_yaml_param_parser
-	base = e5fee9a
-	trimbase = 
+	base = 7457e80
+	trimbase = e5fee9a
 	parent = upstream
 	previous = 017f03a
