--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_lifecycle
-	base = c1d5676
-	trimbase = 
+	base = 74fc6a5
+	trimbase = c1d5676
 	parent = upstream
 	previous = 017f03a
