--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_action
-	base = d8cacbe
-	trimbase = 
+	base = f67cdc6
+	trimbase = d8cacbe
 	parent = upstream
 	previous = 017f03a
