--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl
-	base = 49cab7b
-	trimbase = 
+	base = 550d4a0
+	trimbase = 49cab7b
 	parent = upstream
 	previous = 017f03a
