--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 309e2561
-	base = 67a8d73c
-	trim = 
-	trimbase = 
+	base = 009bc028
+	trim = rcl_yaml_param_parser
+	trimbase = 67a8d73c
