--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 309e2561
-	base = c06ba9c3
-	trim = 
-	trimbase = 
+	base = 19fa3ca4
+	trim = rcl_lifecycle
+	trimbase = c06ba9c3
