--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 309e2561
-	base = f793ed37
-	trim = 
-	trimbase = 
+	base = 56f3da7e
+	trim = rcl_action
+	trimbase = f793ed37
