--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 309e2561
-	base = a7167c89
-	trim = 
-	trimbase = 
+	base = 0d5ec90b
+	trim = rcl
+	trimbase = a7167c89
