--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcl_yaml_param_parser
-	previous = 
-	base = 009bc028
+	previous = 009bc028
+	base = a87a37b4
 	trim = 
 	trimbase = 
