--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_yaml_param_parser
-	previous = 
-	base = 1714f3b7
+	previous = 1714f3b7
+	base = 865b6e2f
 	trim = 
 	trimbase = 
