--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcl
-	previous = 
-	base = 0d5ec90b
+	previous = 0d5ec90b
+	base = 1e0ea8c1
 	trim = 
 	trimbase = 
