--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl
-	previous = 
-	base = 28c0230c
+	previous = 28c0230c
+	base = 6a12b598
 	trim = 
 	trimbase = 
