--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_lifecycle
-	previous = 
-	base = 36e8c7b1
+	previous = 36e8c7b1
+	base = d6961f60
 	trim = 
 	trimbase = 
