--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_action
-	previous = 
-	base = c375ac98
+	previous = c375ac98
+	base = 82436159
 	trim = 
 	trimbase = 
