--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl
-	previous = 
-	base = 7ddcefb6
+	previous = 7ddcefb6
+	base = 84ee0f9f
 	trim = 
 	trimbase = 
