--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_lifecycle
-	previous = 
-	base = 5be28da9
+	previous = 5be28da9
+	base = ca5fdc99
 	trim = 
 	trimbase = 
