--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_yaml_param_parser
-	previous = 
-	base = 37b032e2
+	previous = 37b032e2
+	base = 83aac25d
 	trim = 
 	trimbase = 
