--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_action
-	previous = 
-	base = 088ea2a3
+	previous = 088ea2a3
+	base = aa7f75af
 	trim = 
 	trimbase = 
