--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_lifecycle
-	previous = 
-	base = fd500dc9
+	previous = fd500dc9
+	base = 9dc6dba5
 	trim = 
 	trimbase = 
