--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcl_lifecycle
-	previous = 
-	base = 19fa3ca4
+	previous = 19fa3ca4
+	base = 56940538
 	trim = 
 	trimbase = 
