--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcl_action
-	previous = 
-	base = 56f3da7e
+	previous = 56f3da7e
+	base = b6eab385
 	trim = 
 	trimbase = 
