--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_action
-	previous = 
-	base = 1c2e4922
+	previous = 1c2e4922
+	base = 883e9bcf
 	trim = 
 	trimbase = 
