--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl
-	previous = 
-	base = 17e7303d
+	previous = 17e7303d
+	base = 931fd828
 	trim = 
 	trimbase = 
