--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_yaml_param_parser
-	previous = 
-	base = d762e025
+	previous = d762e025
+	base = 6a60fd45
 	trim = 
 	trimbase = 
