--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7c227219
-	base = a856232f
+	base = ec84ba7a
 	trim = rcl_lifecycle
-	trimbase = 
+	trimbase = a856232f
