--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7c227219
-	base = 35b97d22
+	base = 1a299a28
 	trim = rcl_yaml_param_parser
-	trimbase = 
+	trimbase = 35b97d22
