--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7c227219
-	base = 289da2ab
+	base = 4609970c
 	trim = rcl_action
-	trimbase = 
+	trimbase = 289da2ab
