--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7c227219
-	base = 69b54c4c
+	base = 7e1d0b01
 	trim = rcl
-	trimbase = 
+	trimbase = 69b54c4c
